Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
 
 <p>XBOX 360 Controller emulator if a wrapper library that translates the XInput calls to DirectInput calls, for support non-XInput devices in new application (mostly games).</p>
 
-<p>If you appreciate our work, feel free to <img src="https://www.paypal.com/en_US/i/btn/btn_donate_SM.gif" alt="Donate!"></p>
+<p>If you appreciate our work, feel free to <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=J4LS7ZXWPN66A&amp;lc=US&amp;item_name=x360ce%20donation&amp;currency_code=USD&amp;bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHostedGuest">Donate!</a></p>
 
 <p>Please check wiki for requirements and usage notes.
-Before use please read the <a href="readme.md">readme</a> and <a href="http://forums.ngemu.com/showthread.php?t=155310%20manual">manual</a>.</p>
+Before use please read the <a href="https://github.com/x360ce/x360ce/blob/master/README.MD">readme</a> and <a href="http://forums.ngemu.com/showthread.php?t=155310%20manual">manual</a>.</p>
 
 <p><strong>PLEASE READ LIBRARIES MANUAL BEFORE REPORTING ISSUES:</strong></p>
 
 <p><a href="http://ngemu.com/threads/x360ce-libraries-tutorial-by-resolutespider5.155310/">http://ngemu.com/threads/x360ce-libraries-tutorial-by-resolutespider5.155310/</a></p>
 
-<p><img src="http://www.gnu.org/licenses/lgpl.html%20http://www.gnu.org/graphics/lgplv3-147x51.png" alt=""> <img src="http://www.visualsvn.com%20http://www.visualsvn.com/images/VisualSVN_125x37.gif" alt=""></p>
+<p><img src="http://www.gnu.org/graphics/lgplv3-147x51.png" alt=""> <img src="http://www.visualsvn.com/images/VisualSVN_125x37.gif" alt=""></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/x360ce">x360ce</a></p>
